-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8, openjdk8u312, 9, 11, 13, 14
-
Component/s: hotspot
-
b26
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8259918 | 13.0.7 | Ekaterina Vergizova | P3 | Resolved | Fixed | b01 |
| JDK-8261043 | 13.0.6 | Ekaterina Vergizova | P3 | Resolved | Fixed | b01 |
| JDK-8251540 | 11.0.10-oracle | Kevin Walls | P3 | Resolved | Fixed | b04 |
| JDK-8256356 | 11.0.10 | Coleen Phillimore | P3 | Resolved | Fixed | b03 |
| JDK-8289478 | openjdk8u352 | Dongbo He | P3 | Resolved | Fixed | b01 |
| JDK-8358242 | shenandoah8u352 | Dongbo He | P3 | Resolved | Fixed | b01 |
| JDK-8315306 | 8u401 | Fairoz Matte | P3 | Resolved | Fixed | b01 |
DebugInfoReadStream::read_method()
Stack: [0x15020000,0x15070000], sp=0x1506f828, free space=318k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [jvm.dll+0x2b7669] DebugInfoReadStream::read_method+0x39;; ?read_method@DebugInfoReadStream@@QAEPAVMethod@@XZ+0x39
V [jvm.dll+0x38a06e] CompiledMethod::scope_desc_at+0xbe;; ?scope_desc_at@CompiledMethod@@QAEPAVScopeDesc@@PAE@Z+0xbe
V [jvm.dll+0x61b0c7] create_inline_record+0x117;; ?create_inline_record@@YAPAU_jvmtiCompiledMethodLoadInlineRecord@@PAVnmethod@@@Z+0x117
V [jvm.dll+0x61c9cb] JvmtiExport::post_compiled_method_load+0x13b;; ?post_compiled_method_load@JvmtiExport@@SAXPAVnmethod@@@Z+0x13b
V [jvm.dll+0x624a82] JvmtiDeferredEvent::post+0x102;; ?post@JvmtiDeferredEvent@@QAEXXZ+0x102
V [jvm.dll+0x89179c] JavaThread::thread_main_inner+0xcc;; ?thread_main_inner@JavaThread@@QAEXXZ+0xcc
V [jvm.dll+0x89095e] JavaThread::run+0x18e;; ?run@JavaThread@@UAEXXZ+0x18e
V [jvm.dll+0x7765ab] thread_native_entry+0x10b;; ?thread_native_entry@@YGIPAVThread@@@Z+0x10b
C [msvcr120.dll+0x2c01d]
C [msvcr120.dll+0x2c001]
C [KERNEL32.DLL+0x17c04]
C [ntdll.dll+0x5ab8f]
C [ntdll.dll+0x5ab5a]
This was out of 100 runs.
- backported by
-
JDK-8251540 various crashes in JvmtiExport::post_compiled_method_load
-
- Resolved
-
-
JDK-8256356 various crashes in JvmtiExport::post_compiled_method_load
-
- Resolved
-
-
JDK-8259918 various crashes in JvmtiExport::post_compiled_method_load
-
- Resolved
-
-
JDK-8261043 various crashes in JvmtiExport::post_compiled_method_load
-
- Resolved
-
-
JDK-8289478 various crashes in JvmtiExport::post_compiled_method_load
-
- Resolved
-
-
JDK-8315306 various crashes in JvmtiExport::post_compiled_method_load
-
- Resolved
-
-
JDK-8358242 various crashes in JvmtiExport::post_compiled_method_load
-
- Resolved
-
- duplicates
-
JDK-8202883 crash in the JvmtiExport::post_compiled_method_load
-
- Closed
-
-
JDK-8225226 vmTestbase/nsk/jvmti/scenarios/hotswap/HS101/hs101t005 crashes in Method::checked_resolve_jmethod_id(jmethodID)
-
- Closed
-
- relates to
-
JDK-8235218 Minimal VM is broken after JDK-8173361
-
- Resolved
-
-
JDK-8305165 [8u] ServiceThread::nmethods_do is not called to keep nmethods from being zombied while in the queue
-
- Resolved
-
-
JDK-8235696 ZGC: assert(ZNMethod::is_armed(nm) == _should_disarm_nmethods) failed: Invalid state
-
- Closed
-
-
JDK-8181110 jvmti/hotswap test crashes in Method::checked_resolve_jmethod_id(_jmethodID*)
-
- Closed
-
-
JDK-8212159 assert(zombie_ok || !nm->is_zombie()) failed: cannot lock a zombie method
-
- Closed
-
-
JDK-7030041 deferred CompiledMethodLoad events may have a stale oop problem
-
- Closed
-
- links to
-
Commit
openjdk/jdk8u-dev/1b4f32d6
-
Commit
openjdk/jdk13u-dev/79e77ae2
-
Review
openjdk/jdk8u-dev/9
-
Review
openjdk/jdk13u-dev/73